--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen### Go template
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -10,3 +18,6 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+vendor/
+/upload/
